Fix: "aling-items" property set to stretch for form element

--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -6,6 +6,7 @@
 form {
   display: flex;
   justify-content: center;
+  align-items: stretch;
   gap: 0.5rem;
 
   width: 100%;
